[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/batata_inimigo-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/potato_enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/barradevida_inimigo.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/weak_spot.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.3644, 13.1684 )

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[node name="potato_enemy" type="KinematicBody2D" groups=[
"potato_enemy",
]]
collision_layer = 2
script = ExtResource( 2 )
life = 40

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 1.07703, -2.91933 )
vframes = 3
hframes = 8
frame = 15

[node name="colis√£o" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.566814, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="weak_spot" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="weak_spot"]
polygon = PoolVector2Array( -10.1153, 4.81424, -9.10316, 12.852, 7.09138, 12.9711, 10.9614, 1.95638, 11.0805, -5.66458, 10.0964, -11.028, 7.04095, -14.0835, -0.945005, -14.014, -4.90326, -11.9308, -9.83372, -6.0281 )

[node name="barradevida_inimigo" parent="." instance=ExtResource( 3 )]
margin_left = -6.60487
margin_top = -18.3064
margin_right = 9.39513
margin_bottom = -15.3064
color = Color( 0.913725, 0.862745, 0.0980392, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 2 )

[node name="shoot" type="Timer" parent="."]
wait_time = 4.0

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0.132265, 14.7539 )

[node name="subshoot" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="shoot2" type="Timer" parent="."]
wait_time = 0.4

[node name="direction" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="direction"]
polygon = PoolVector2Array( -6.2734, -14.1045, -18.9962, -3.82347, -21.0524, 10.0559, 17.5015, 11.3411, 22.642, -8.57845 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="damage" from="weak_spot" to="." method="_on_weak_spot_damage"]
[connection signal="timeout" from="shoot" to="." method="_on_shoot_timeout"]
[connection signal="timeout" from="subshoot" to="." method="_on_subshoot_timeout"]
[connection signal="timeout" from="shoot2" to="." method="_on_shoot2_timeout"]
[connection signal="area_entered" from="direction" to="." method="_on_direction_area_entered"]
